tests/ui/response_format_unsupported.rs
use openrouter_toolkit::response_format_model;

const MODEL: &str = response_format_model!("perceptron/perceptron-mk1");

fn main() {
    let _ = MODEL;
}
